fix: remove time from transactions