@@ -6,7 +6,10 @@ import com.buckpal.entity.Category;
 import com.buckpal.entity.CsvMappingTemplate;
 import com.buckpal.entity.Transaction;
 import com.buckpal.entity.User;
-import com.buckpal.repository.*;
+import com.buckpal.repository.AccountRepository;
+import com.buckpal.repository.CategoryRepository;
+import com.buckpal.repository.CsvMappingTemplateRepository;
+import com.buckpal.repository.TransactionRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -18,60 +21,70 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 @Service
 public class CsvImportWizardService {
-    
+
     @Autowired
     private TransactionRepository transactionRepository;
-    
+
     @Autowired
     private AccountRepository accountRepository;
-    
+
     @Autowired
     private CategoryRepository categoryRepository;
-    
+
     @Autowired
     private CsvMappingTemplateRepository csvMappingTemplateRepository;
-    
-    // In-memory storage for CSV sessions (in production, use Redis or database)
+
+    //TODO In-memory storage for CSV sessions (in production, use Redis or database)
     private final Map<String, CsvSession> csvSessions = new ConcurrentHashMap<>();
-    
+
     private static final DateTimeFormatter[] DATE_FORMATTERS = {
-        DateTimeFormatter.ofPattern("dd/MM/yyyy"),
-        DateTimeFormatter.ofPattern("MM/dd/yyyy"),
-        DateTimeFormatter.ofPattern("yyyy-MM-dd"),
-        DateTimeFormatter.ofPattern("d/M/yyyy"),
-        DateTimeFormatter.ofPattern("M/d/yyyy"),
-        DateTimeFormatter.ofPattern("dd-MM-yyyy"),
-        DateTimeFormatter.ofPattern("MM-dd-yyyy")
+            DateTimeFormatter.ofPattern("dd/MM/yyyy"),
+            DateTimeFormatter.ofPattern("MM/dd/yyyy"),
+            DateTimeFormatter.ofPattern("yyyy-MM-dd"),
+            DateTimeFormatter.ofPattern("d/M/yyyy"),
+            DateTimeFormatter.ofPattern("M/d/yyyy"),
+            DateTimeFormatter.ofPattern("dd-MM-yyyy"),
+            DateTimeFormatter.ofPattern("MM-dd-yyyy"),
     };
-    
+
+    private final Logger logger = LoggerFactory.getLogger(CsvImportWizardService.class);
+
     /**
      * Step 1: Upload CSV and return preview
      */
     public CsvUploadResponse uploadCsv(MultipartFile file) throws IOException {
         String sessionId = UUID.randomUUID().toString();
-        
+
         List<List<String>> allRows = new ArrayList<>();
         List<String> headers = new ArrayList<>();
         String detectedSeparator = null;
-        
+
         try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream()))) {
             String line;
             boolean isFirstLine = true;
-            
+
             while ((line = reader.readLine()) != null) {
                 if (isFirstLine) {
                     // Detect separator from header line
                     detectedSeparator = detectSeparator(line);
                 }
-                
+
                 List<String> row = parseCsvLine(line, detectedSeparator);
-                
+
                 if (isFirstLine) {
                     headers = row;
                     isFirstLine = false;
@@ -80,7 +93,7 @@ public class CsvImportWizardService {
                 }
             }
         }
-        
+
         // Store session data
         CsvSession session = new CsvSession();
         session.setSessionId(sessionId);
@@ -88,15 +101,15 @@ public class CsvImportWizardService {
         session.setAllRows(allRows);
         session.setOriginalFilename(file.getOriginalFilename());
         csvSessions.put(sessionId, session);
-        
+
         // Return first 10 rows for preview
         List<List<String>> previewData = allRows.stream()
                 .limit(10)
                 .collect(Collectors.toList());
-        
+
         return new CsvUploadResponse(sessionId, headers, previewData, allRows.size());
     }
-    
+
     /**
      * Step 2: Process mapping and return preview with validation
      */
@@ -105,33 +118,33 @@ public class CsvImportWizardService {
         if (session == null) {
             throw new RuntimeException("CSV session not found");
         }
-        
+
         session.setMapping(request);
-        
+
         List<CsvPreviewResponse.TransactionPreview> validTransactions = new ArrayList<>();
         List<CsvPreviewResponse.ValidationError> validationErrors = new ArrayList<>();
         List<CsvPreviewResponse.DuplicateDetection> duplicateWarnings = new ArrayList<>();
-        
+
         Account account = accountRepository.findById(request.getAccountId())
                 .orElseThrow(() -> new RuntimeException("Account not found"));
-        
+
         for (int i = 0; i < session.getAllRows().size(); i++) {
             List<String> row = session.getAllRows().get(i);
-            
+
             try {
                 TransactionData transactionData = parseTransactionFromRow(row, request, i + 2); // +2 because header is row 1
-                
+
                 if (transactionData.hasErrors()) {
                     validationErrors.addAll(transactionData.getValidationErrors());
                 } else {
                     // Check for duplicates
                     Optional<Transaction> duplicate = findDuplicateTransaction(
-                            account.getId(), 
-                            transactionData.getDate(), 
-                            transactionData.getAmount(), 
+                            account.getId(),
+                            transactionData.getDate(),
+                            transactionData.getAmount(),
                             transactionData.getDescription()
                     );
-                    
+
                     if (duplicate.isPresent()) {
                         duplicateWarnings.add(new CsvPreviewResponse.DuplicateDetection(
                                 i + 2,
@@ -141,7 +154,7 @@ public class CsvImportWizardService {
                                 duplicate.get().getId()
                         ));
                     }
-                    
+
                     validTransactions.add(new CsvPreviewResponse.TransactionPreview(
                             i + 2,
                             transactionData.getDate(),
@@ -151,7 +164,7 @@ public class CsvImportWizardService {
                             determineTransactionType(transactionData.getAmount())
                     ));
                 }
-                
+
             } catch (Exception e) {
                 validationErrors.add(new CsvPreviewResponse.ValidationError(
                         i + 2,
@@ -161,10 +174,10 @@ public class CsvImportWizardService {
                 ));
             }
         }
-        
+
         // Create balanced preview (4 transactions: 2 income + 2 expense)
         List<CsvPreviewResponse.TransactionPreview> balancedPreview = createBalancedPreview(validTransactions);
-        
+
         CsvPreviewResponse response = new CsvPreviewResponse();
         response.setSessionId(request.getSessionId());
         response.setValidTransactions(balancedPreview); // Show balanced preview instead of all
@@ -174,51 +187,51 @@ public class CsvImportWizardService {
         response.setValidCount(validTransactions.size()); // Keep full count for stats
         response.setErrorCount(validationErrors.size());
         response.setDuplicateCount(duplicateWarnings.size());
-        
+
         return response;
     }
-    
+
     /**
      * Create a balanced preview with 4 transactions (2 income + 2 expense)
      */
     private List<CsvPreviewResponse.TransactionPreview> createBalancedPreview(
             List<CsvPreviewResponse.TransactionPreview> allTransactions) {
-        
+
         List<CsvPreviewResponse.TransactionPreview> incomeTransactions = allTransactions.stream()
                 .filter(t -> "INCOME".equals(t.getTransactionType()))
-                .collect(Collectors.toList());
-        
+                .toList();
+
         List<CsvPreviewResponse.TransactionPreview> expenseTransactions = allTransactions.stream()
                 .filter(t -> "EXPENSE".equals(t.getTransactionType()))
-                .collect(Collectors.toList());
-        
+                .toList();
+
         List<CsvPreviewResponse.TransactionPreview> preview = new ArrayList<>();
-        
+
         // Prioritize showing more income transactions (2-3) for better visibility
         if (incomeTransactions.size() >= 3) {
             // Add 3 income transactions if we have enough
-            preview.addAll(incomeTransactions.stream().limit(3).collect(Collectors.toList()));
+            preview.addAll(incomeTransactions.stream().limit(3).toList());
             // Add 1 expense transaction
-            preview.addAll(expenseTransactions.stream().limit(1).collect(Collectors.toList()));
+            preview.addAll(expenseTransactions.stream().limit(1).toList());
         } else if (incomeTransactions.size() >= 2) {
             // Add 2 income transactions
-            preview.addAll(incomeTransactions.stream().limit(2).collect(Collectors.toList()));
+            preview.addAll(incomeTransactions.stream().limit(2).toList());
             // Add up to 2 expense transactions
-            preview.addAll(expenseTransactions.stream().limit(2).collect(Collectors.toList()));
+            preview.addAll(expenseTransactions.stream().limit(2).toList());
         } else {
             // Fallback: add available income transactions
-            preview.addAll(incomeTransactions.stream().limit(4).collect(Collectors.toList()));
+            preview.addAll(incomeTransactions.stream().limit(4).toList());
             // Fill remaining slots with expense transactions
             int remainingSlots = 4 - preview.size();
             if (remainingSlots > 0) {
-                preview.addAll(expenseTransactions.stream().limit(remainingSlots).collect(Collectors.toList()));
+                preview.addAll(expenseTransactions.stream().limit(remainingSlots).toList());
             }
         }
-        
+
         // Ensure we have exactly 4 transactions if possible
         if (preview.size() < 4) {
             int needed = 4 - preview.size();
-            
+
             // Add more transactions from whichever type has more available
             if (expenseTransactions.size() > preview.stream()
                     .mapToInt(t -> "EXPENSE".equals(t.getTransactionType()) ? 1 : 0).sum()) {
@@ -228,7 +241,7 @@ public class CsvImportWizardService {
                 preview.addAll(expenseTransactions.stream()
                         .skip(currentExpenseCount)
                         .limit(needed)
-                        .collect(Collectors.toList()));
+                        .toList());
             } else if (incomeTransactions.size() > preview.stream()
                     .mapToInt(t -> "INCOME".equals(t.getTransactionType()) ? 1 : 0).sum()) {
                 // Add more income
@@ -237,16 +250,16 @@ public class CsvImportWizardService {
                 preview.addAll(incomeTransactions.stream()
                         .skip(currentIncomeCount)
                         .limit(needed)
-                        .collect(Collectors.toList()));
+                        .toList());
             }
         }
-        
+
         // Sort by row index to maintain original order
         return preview.stream()
                 .sorted(Comparator.comparingInt(CsvPreviewResponse.TransactionPreview::getRowIndex))
                 .collect(Collectors.toList());
     }
-    
+
     /**
      * Step 3: Final import with user validation choices
      */
@@ -255,106 +268,106 @@ public class CsvImportWizardService {
         if (session == null) {
             throw new RuntimeException("CSV session not found");
         }
-        
+
         CsvImportResult result = new CsvImportResult(request.getSessionId());
         List<String> errors = new ArrayList<>();
         List<Long> importedTransactionIds = new ArrayList<>();
-        
+
         Account account = accountRepository.findById(session.getMapping().getAccountId())
                 .orElseThrow(() -> new RuntimeException("Account not found"));
-        
+
         int successCount = 0;
         int skippedCount = 0;
         int failedCount = 0;
-        
+
         for (int i = 0; i < session.getAllRows().size(); i++) {
             int rowIndex = i + 2; // +2 for header
-            
+
             // Skip rejected rows
             if (request.getRejectedRows() != null && request.getRejectedRows().contains(rowIndex)) {
                 skippedCount++;
                 continue;
             }
-            
+
             // Skip if not in approved rows (when approved list is provided and not empty)
             // If approvedRows is empty, import all valid transactions (preview workflow)
-            if (request.getApprovedRows() != null && 
-                !request.getApprovedRows().isEmpty() && 
-                !request.getApprovedRows().contains(rowIndex)) {
+            if (request.getApprovedRows() != null &&
+                    !request.getApprovedRows().isEmpty() &&
+                    !request.getApprovedRows().contains(rowIndex)) {
                 skippedCount++;
                 continue;
             }
-            
+
             try {
                 List<String> row = session.getAllRows().get(i);
                 TransactionData transactionData;
-                
+
                 // Apply manual corrections if provided
-                if (request.getManualCorrections() != null && 
-                    request.getManualCorrections().containsKey(rowIndex)) {
-                    transactionData = applyManualCorrection(row, session.getMapping(), rowIndex, 
-                                                          request.getManualCorrections().get(rowIndex));
+                if (request.getManualCorrections() != null &&
+                        request.getManualCorrections().containsKey(rowIndex)) {
+                    transactionData = applyManualCorrection(row, session.getMapping(), rowIndex,
+                            request.getManualCorrections().get(rowIndex));
                 } else {
                     transactionData = parseTransactionFromRow(row, session.getMapping(), rowIndex);
                 }
-                
+
                 if (transactionData.hasErrors()) {
                     failedCount++;
-                    errors.add("Ligne " + rowIndex + ": " + 
-                              transactionData.getValidationErrors().stream()
-                                      .map(CsvPreviewResponse.ValidationError::getError)
-                                      .collect(Collectors.joining(", ")));
+                    errors.add("Ligne " + rowIndex + ": " +
+                            transactionData.getValidationErrors().stream()
+                                    .map(CsvPreviewResponse.ValidationError::getError)
+                                    .collect(Collectors.joining(", ")));
                     continue;
                 }
-                
+
                 // Create and save transaction
                 Transaction transaction = createTransactionFromData(transactionData, account);
                 transaction = transactionRepository.save(transaction);
                 importedTransactionIds.add(transaction.getId());
                 successCount++;
-                
+
             } catch (Exception e) {
                 failedCount++;
                 errors.add("Ligne " + rowIndex + ": " + e.getMessage());
             }
         }
-        
+
         // Save mapping template if requested
         if (session.getMapping().isSaveMapping() && session.getMapping().getBankName() != null) {
             saveMappingTemplate(session.getMapping(), account.getUser());
         }
-        
+
         // Clean up session
         csvSessions.remove(request.getSessionId());
-        
+
         result.setTotalProcessed(session.getAllRows().size());
         result.setSuccessfulImports(successCount);
         result.setSkippedRows(skippedCount);
         result.setFailedImports(failedCount);
         result.setErrors(errors);
         result.setImportedTransactionIds(importedTransactionIds);
-        
+
         return result;
     }
-    
+
     /**
      * Get saved mapping templates for a user
      */
     public List<CsvMappingTemplate> getMappingTemplates(Long userId) {
         return csvMappingTemplateRepository.findByUserId(userId);
     }
-    
+
     /**
      * Apply a saved mapping template
      */
     public CsvColumnMappingRequest applySavedMapping(String sessionId, String bankName, Long userId) {
         Optional<CsvMappingTemplate> template = csvMappingTemplateRepository
                 .findByUserIdAndBankName(userId, bankName);
-        
+
         if (template.isEmpty()) {
             throw new RuntimeException("Template de mapping non trouvé");
         }
-        
+
         CsvMappingTemplate t = template.get();
         CsvColumnMappingRequest request = new CsvColumnMappingRequest();
         request.setSessionId(sessionId);
@@ -365,12 +378,12 @@ public class CsvImportWizardService {
         request.setDescriptionColumnIndex(t.getDescriptionColumnIndex());
         request.setCategoryColumnIndex(t.getCategoryColumnIndex());
         request.setBankName(t.getBankName());
-        
+
         return request;
     }
-    
+
     // Private helper methods
-    
+
     /**
      * Detect CSV separator from the first line (headers)
      */
@@ -379,35 +392,35 @@ public class CsvImportWizardService {
         int semicolonCount = (int) headerLine.chars().filter(ch -> ch == ';').count();
         int commaCount = (int) headerLine.chars().filter(ch -> ch == ',').count();
         int tabCount = (int) headerLine.chars().filter(ch -> ch == '\t').count();
-        
+
         // Log for debugging
-        System.out.println("CSV Separator detection - Line: " + headerLine);
-        System.out.println("Semicolon count: " + semicolonCount + ", Comma count: " + commaCount + ", Tab count: " + tabCount);
-        
+        logger.debug("CSV Separator detection - Line: " + headerLine);
+        logger.debug("Semicolon count: " + semicolonCount + ", Comma count: " + commaCount + ", Tab count: " + tabCount);
+
         // Prioritize semicolon (French format), then comma, then tab
         if (semicolonCount > 0) {
-            System.out.println("Detected separator: semicolon (;)");
+            logger.debug("Detected separator: semicolon (;)");
             return ";";
         } else if (commaCount > 0) {
-            System.out.println("Detected separator: comma (,)");
+            logger.debug("Detected separator: comma (,)");
             return ",";
         } else if (tabCount > 0) {
-            System.out.println("Detected separator: tab");
+            logger.debug("Detected separator: tab");
             return "\t";
         } else {
-            System.out.println("No separator detected, defaulting to comma");
+            logger.debug("No separator detected, defaulting to comma");
             return ",";
         }
     }
-    
+
     private List<String> parseCsvLine(String line, String separator) {
         if (separator == null) separator = ",";
-        
+
         List<String> result = new ArrayList<>();
         StringBuilder current = new StringBuilder();
         boolean inQuotes = false;
         char sep = separator.charAt(0);
-        
+
         for (char c : line.toCharArray()) {
             if (c == '"') {
                 inQuotes = !inQuotes;
@@ -419,54 +432,58 @@ public class CsvImportWizardService {
             }
         }
         result.add(current.toString().trim());
-        
+
         // Clean quotes
         return result.stream()
                 .map(s -> s.replaceAll("^\"|\"$", ""))
                 .collect(Collectors.toList());
     }
-    
+
     private TransactionData parseTransactionFromRow(List<String> row, CsvColumnMappingRequest mapping, int rowIndex) {
         TransactionData data = new TransactionData();
         List<CsvPreviewResponse.ValidationError> errors = new ArrayList<>();
-        
+
         // Parse date
         if (mapping.getDateColumnIndex() != null && mapping.getDateColumnIndex() < row.size()) {
             String dateStr = row.get(mapping.getDateColumnIndex());
-            LocalDate date = parseDate(dateStr);
+            LocalDate date;
+            if (dateStr.contains(" ")) { // Avoid time in transaction
+                date = parseDate(dateStr.substring(0, dateStr.indexOf(' ')));
+            } else
+                date = parseDate(dateStr);
+
             if (date == null) {
-                errors.add(new CsvPreviewResponse.ValidationError(rowIndex, 
-                          "Format de date invalide: " + dateStr, dateStr, "date"));
+                throw new DateTimeParseException("Format de date invalide", dateStr, mapping.getDateColumnIndex());
             } else {
                 data.setDate(date);
             }
         }
-        
+
         // Parse amount
         BigDecimal amount = parseAmountFromMapping(row, mapping, rowIndex, errors);
         data.setAmount(amount);
-        
+
         // Parse description
         if (mapping.getDescriptionColumnIndex() != null && mapping.getDescriptionColumnIndex() < row.size()) {
             data.setDescription(row.get(mapping.getDescriptionColumnIndex()));
         }
-        
+
         // Parse category
         if (mapping.getCategoryColumnIndex() != null && mapping.getCategoryColumnIndex() < row.size()) {
             data.setCategory(row.get(mapping.getCategoryColumnIndex()));
         }
-        
+
         data.setValidationErrors(errors);
         return data;
     }
-    
-    private BigDecimal parseAmountFromMapping(List<String> row, CsvColumnMappingRequest mapping, 
-                                            int rowIndex, List<CsvPreviewResponse.ValidationError> errors) {
+
+    private BigDecimal parseAmountFromMapping(List<String> row, CsvColumnMappingRequest mapping,
+                                              int rowIndex, List<CsvPreviewResponse.ValidationError> errors) {
         BigDecimal amount = BigDecimal.ZERO;
         boolean hasAmount = false;
         boolean hasDebit = false;
         boolean hasCredit = false;
-        
+
         // Check single amount column
         if (mapping.getAmountColumnIndex() != null && mapping.getAmountColumnIndex() < row.size()) {
             String amountStr = row.get(mapping.getAmountColumnIndex());
@@ -475,11 +492,11 @@ public class CsvImportWizardService {
                 hasAmount = true;
             }
         }
-        
+
         // Check debit/credit columns
         BigDecimal debitAmount = BigDecimal.ZERO;
         BigDecimal creditAmount = BigDecimal.ZERO;
-        
+
         if (mapping.getDebitColumnIndex() != null && mapping.getDebitColumnIndex() < row.size()) {
             String debitStr = row.get(mapping.getDebitColumnIndex());
             if (!debitStr.trim().isEmpty()) {
@@ -491,7 +508,7 @@ public class CsvImportWizardService {
                 }
             }
         }
-        
+
         if (mapping.getCreditColumnIndex() != null && mapping.getCreditColumnIndex() < row.size()) {
             String creditStr = row.get(mapping.getCreditColumnIndex());
             if (!creditStr.trim().isEmpty()) {
@@ -501,21 +518,21 @@ public class CsvImportWizardService {
                 }
             }
         }
-        
+
         // Determine final amount
         if (hasAmount && (hasDebit || hasCredit)) {
             // Both single amount and debit/credit - needs manual validation
             errors.add(new CsvPreviewResponse.ValidationError(rowIndex,
-                      "Montant présent dans colonnes séparées et unique - validation manuelle requise",
-                      String.join(",", row), "amount"));
+                    "Montant présent dans colonnes séparées et unique - validation manuelle requise",
+                    String.join(",", row), "amount"));
             return BigDecimal.ZERO;
         } else if (hasAmount) {
             return amount;
         } else if (hasDebit && hasCredit) {
             // Both debit and credit - needs manual validation
             errors.add(new CsvPreviewResponse.ValidationError(rowIndex,
-                      "Montants présents dans débit ET crédit - validation manuelle requise",
-                      String.join(",", row), "amount"));
+                    "Montants présents dans débit ET crédit - validation manuelle requise",
+                    String.join(",", row), "amount"));
             return BigDecimal.ZERO;
         } else if (hasDebit) {
             return debitAmount;
@@ -523,16 +540,16 @@ public class CsvImportWizardService {
             return creditAmount;
         } else {
             errors.add(new CsvPreviewResponse.ValidationError(rowIndex,
-                      "Aucun montant valide trouvé", String.join(",", row), "amount"));
+                    "Aucun montant valide trouvé", String.join(",", row), "amount"));
             return BigDecimal.ZERO;
         }
     }
-    
+
     private LocalDate parseDate(String dateStr) {
         if (dateStr == null || dateStr.trim().isEmpty()) {
             return null;
         }
-        
+
         for (DateTimeFormatter formatter : DATE_FORMATTERS) {
             try {
                 return LocalDate.parse(dateStr.trim(), formatter);
@@ -542,23 +559,23 @@ public class CsvImportWizardService {
         }
         return null;
     }
-    
+
     private BigDecimal parseAmount(String amountStr) {
         if (amountStr == null || amountStr.trim().isEmpty()) {
             return null;
         }
-        
+
         try {
             String cleanAmount = amountStr.trim();
-            
+
             // Handle parentheses for negative amounts
             if (cleanAmount.startsWith("(") && cleanAmount.endsWith(")")) {
                 cleanAmount = "-" + cleanAmount.substring(1, cleanAmount.length() - 1);
             }
-            
+
             // Remove currency symbols and spaces
             cleanAmount = cleanAmount.replaceAll("[\\$€£¥\\s]", "");
-            
+
             // Handle French decimal format (comma as decimal separator)
             // First check if it's French format: has comma as decimal separator
             if (cleanAmount.matches(".*\\d+,\\d{1,2}$")) {
@@ -568,93 +585,93 @@ public class CsvImportWizardService {
                 if (cleanAmount.indexOf('.') != cleanAmount.lastIndexOf('.')) {
                     // Multiple dots - keep only the last one as decimal separator
                     int lastDot = cleanAmount.lastIndexOf('.');
-                    cleanAmount = cleanAmount.substring(0, lastDot).replaceAll("\\.", "") + 
-                                 cleanAmount.substring(lastDot);
+                    cleanAmount = cleanAmount.substring(0, lastDot).replaceAll("\\.", "") +
+                            cleanAmount.substring(lastDot);
                 }
             } else {
                 // English format: remove thousand separators (commas)
                 cleanAmount = cleanAmount.replaceAll(",", "");
             }
-            
+
             // Handle negative sign anywhere in the string
             boolean isNegative = cleanAmount.contains("-");
             cleanAmount = cleanAmount.replaceAll("-", "");
-            
+
             BigDecimal result = new BigDecimal(cleanAmount);
             return isNegative ? result.negate() : result;
-            
+
         } catch (NumberFormatException e) {
             return null;
         }
     }
-    
-    private Optional<Transaction> findDuplicateTransaction(Long accountId, LocalDate date, 
-                                                         BigDecimal amount, String description) {
+
+    private Optional<Transaction> findDuplicateTransaction(Long accountId, LocalDate date,
+                                                           BigDecimal amount, String description) {
         return transactionRepository.findByAccountIdAndTransactionDateAndAmountAndDescription(
                 accountId, date, amount, description);
     }
-    
+
     private String determineTransactionType(BigDecimal amount) {
         return amount.compareTo(BigDecimal.ZERO) >= 0 ? "INCOME" : "EXPENSE";
     }
-    
-    private TransactionData applyManualCorrection(List<String> row, CsvColumnMappingRequest mapping, 
-                                                int rowIndex, CsvValidationRequest.ManualCorrection correction) {
+
+    private TransactionData applyManualCorrection(List<String> row, CsvColumnMappingRequest mapping,
+                                                  int rowIndex, CsvValidationRequest.ManualCorrection correction) {
         TransactionData data = new TransactionData();
         List<CsvPreviewResponse.ValidationError> errors = new ArrayList<>();
-        
+
         // Apply corrected date
         if (correction.getCorrectedDate() != null) {
             LocalDate date = parseDate(correction.getCorrectedDate());
             if (date == null) {
                 errors.add(new CsvPreviewResponse.ValidationError(rowIndex,
-                          "Date corrigée invalide", correction.getCorrectedDate(), "date"));
+                        "Date corrigée invalide", correction.getCorrectedDate(), "date"));
             }
             data.setDate(date);
         }
-        
+
         // Apply corrected amount
         if (correction.getCorrectedAmount() != null) {
             BigDecimal amount = parseAmount(correction.getCorrectedAmount());
             if (amount == null) {
                 errors.add(new CsvPreviewResponse.ValidationError(rowIndex,
-                          "Montant corrigé invalide", correction.getCorrectedAmount(), "amount"));
+                        "Montant corrigé invalide", correction.getCorrectedAmount(), "amount"));
             }
             data.setAmount(amount);
         }
-        
+
         // Apply corrected description
         if (correction.getCorrectedDescription() != null) {
             data.setDescription(correction.getCorrectedDescription());
         }
-        
+
         data.setValidationErrors(errors);
         return data;
     }
-    
+
     private Transaction createTransactionFromData(TransactionData data, Account account) {
         Transaction transaction = new Transaction();
         transaction.setAccount(account);
         transaction.setTransactionDate(data.getDate());
         transaction.setAmount(data.getAmount().abs());
         transaction.setDescription(data.getDescription());
-        transaction.setTransactionType(data.getAmount().compareTo(BigDecimal.ZERO) >= 0 ? 
+        transaction.setTransactionType(data.getAmount().compareTo(BigDecimal.ZERO) >= 0 ?
                 Transaction.TransactionType.INCOME : Transaction.TransactionType.EXPENSE);
         transaction.setIsPending(false);
-        
+
         // Set category if available
         if (data.getCategory() != null && !data.getCategory().trim().isEmpty()) {
             // Find category by name (you might want to implement category matching logic)
             // For now, we'll leave it null and let user assign categories later
         }
-        
+
         return transaction;
     }
-    
+
     private void saveMappingTemplate(CsvColumnMappingRequest mapping, User user) {
         // Delete existing template for this bank
         csvMappingTemplateRepository.deleteByUserIdAndBankName(user.getId(), mapping.getBankName());
-        
+
         // Create new template
         CsvMappingTemplate template = new CsvMappingTemplate(mapping.getBankName(), user);
         template.setDateColumnIndex(mapping.getDateColumnIndex());
@@ -663,10 +680,10 @@ public class CsvImportWizardService {
         template.setCreditColumnIndex(mapping.getCreditColumnIndex());
         template.setDescriptionColumnIndex(mapping.getDescriptionColumnIndex());
         template.setCategoryColumnIndex(mapping.getCategoryColumnIndex());
-        
+
         csvMappingTemplateRepository.save(template);
     }
-    
+
     // Inner classes for data handling
     private static class CsvSession {
         private String sessionId;
@@ -674,51 +691,99 @@ public class CsvImportWizardService {
         private List<String> headers;
         private List<List<String>> allRows;
         private CsvColumnMappingRequest mapping;
-        
+
         // Getters and setters
-        public String getSessionId() { return sessionId; }
-        public void setSessionId(String sessionId) { this.sessionId = sessionId; }
-        
-        public String getOriginalFilename() { return originalFilename; }
-        public void setOriginalFilename(String originalFilename) { this.originalFilename = originalFilename; }
-        
-        public List<String> getHeaders() { return headers; }
-        public void setHeaders(List<String> headers) { this.headers = headers; }
-        
-        public List<List<String>> getAllRows() { return allRows; }
-        public void setAllRows(List<List<String>> allRows) { this.allRows = allRows; }
-        
-        public CsvColumnMappingRequest getMapping() { return mapping; }
-        public void setMapping(CsvColumnMappingRequest mapping) { this.mapping = mapping; }
+        public String getSessionId() {
+            return sessionId;
+        }
+
+        public void setSessionId(String sessionId) {
+            this.sessionId = sessionId;
+        }
+
+        public String getOriginalFilename() {
+            return originalFilename;
+        }
+
+        public void setOriginalFilename(String originalFilename) {
+            this.originalFilename = originalFilename;
+        }
+
+        public List<String> getHeaders() {
+            return headers;
+        }
+
+        public void setHeaders(List<String> headers) {
+            this.headers = headers;
+        }
+
+        public List<List<String>> getAllRows() {
+            return allRows;
+        }
+
+        public void setAllRows(List<List<String>> allRows) {
+            this.allRows = allRows;
+        }
+
+        public CsvColumnMappingRequest getMapping() {
+            return mapping;
+        }
+
+        public void setMapping(CsvColumnMappingRequest mapping) {
+            this.mapping = mapping;
+        }
     }
-    
+
     private static class TransactionData {
         private LocalDate date;
         private BigDecimal amount;
         private String description;
         private String category;
         private List<CsvPreviewResponse.ValidationError> validationErrors = new ArrayList<>();
-        
+
         public boolean hasErrors() {
             return !validationErrors.isEmpty();
         }
-        
+
         // Getters and setters
-        public LocalDate getDate() { return date; }
-        public void setDate(LocalDate date) { this.date = date; }
-        
-        public BigDecimal getAmount() { return amount; }
-        public void setAmount(BigDecimal amount) { this.amount = amount; }
-        
-        public String getDescription() { return description; }
-        public void setDescription(String description) { this.description = description; }
-        
-        public String getCategory() { return category; }
-        public void setCategory(String category) { this.category = category; }
-        
-        public List<CsvPreviewResponse.ValidationError> getValidationErrors() { return validationErrors; }
-        public void setValidationErrors(List<CsvPreviewResponse.ValidationError> validationErrors) { 
-            this.validationErrors = validationErrors; 
+        public LocalDate getDate() {
+            return date;
+        }
+
+        public void setDate(LocalDate date) {
+            this.date = date;
+        }
+
+        public BigDecimal getAmount() {
+            return amount;
+        }
+
+        public void setAmount(BigDecimal amount) {
+            this.amount = amount;
+        }
+
+        public String getDescription() {
+            return description;
+        }
+
+        public void setDescription(String description) {
+            this.description = description;
+        }
+
+        public String getCategory() {
+            return category;
+        }
+
+        public void setCategory(String category) {
+            this.category = category;
+        }
+
+        public List<CsvPreviewResponse.ValidationError> getValidationErrors() {
+            return validationErrors;
+        }
+
+        public void setValidationErrors(List<CsvPreviewResponse.ValidationError> validationErrors) {
+            this.validationErrors = validationErrors;
         }
     }
 }
